Added new test for titlecasing, fixed typos.

--- a/src/epub/text/badly-cased-story-title-with-subtitle.xhtml
+++ b/src/epub/text/badly-cased-story-title-with-subtitle.xhtml
@@ -8,11 +8,11 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="unknown" epub:type="volume se:short-story">
 			<h2 epub:type="title">
-				<span>Story About Louis <span epub:type="z3998:roman">XIV</span></span>
-				<span epub:type="subtitle">The Sun King</span>
+				<span>Story title with wrong titlecasing</span>
+				<span epub:type="subtitle">of the Text</span>
 			</h2>
-			<p>This file has a story title with a span, and a subtitle.</p>
-			<p>The result should be: title=Story About Louis XIV: The Sun King, id=story-about-louis-xiv, filename=story-about-louis-xiv.xhtml</p>
+			<p>This file has a story title, and a subtitle, both wrongly titlecased.</p>
+			<p>The result should be: title=Story Title with Wrong Titlecasing: Of the Text, id=story-title-with-wrong-titlecasing, filename=story-title-with-wrong-titlecasing.xhtml</p>
 		</section>
 	</body>
 </html>
