--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -29,13 +29,16 @@
 							<a href="text/story-title-with-subtitle.xhtml">Story Title</a>
 						</li>
 						<li>
+							<a href="text/badly-cased-story-title-with-subtitle.xhtml">Story title with wrong titlecasing</a>
+						</li>
+						<li>
 							<a href="text/story-title-with-span.xhtml">An <span epub:type="z3998:roman">X</span>-Ray Fable</a>
 						</li>
 						<li>
 							<a href="text/story-title-with-subtitle-with-span.xhtml">Doomed</a>
 						</li>
 						<li>
-							<a href="text/story-title-with-roman-span-and-subtitle.xhtml">Story About Louis<span epub:type="z3998:roman">XIV</span></a>
+							<a href="text/story-title-with-roman-span-and-subtitle.xhtml">Story About Louis <span epub:type="z3998:roman">XIV</span></a>
 						</li>
 						<li>
 							<a href="text/story-title-with-span-with-subtitle-with-span.xhtml">The Story of the <span epub:type="se:name.vessel.ship">Ulm</span></a>
