--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -42,6 +42,9 @@
 						</li>
 						<li>
 							<a href="text/story-title-with-span-with-subtitle-with-span.xhtml">The Story of the <span epub:type="se:name.vessel.ship">Ulm</span></a>
+						</li>
+						<li>
+							<a href="text/part-3.xhtml" epub:type="z3998:roman">III</a>
 							<ol>
 								<li>
 									<a href="text/part-roman-title.xhtml" epub:type="z3998:roman">X</a>
