Updated expected ids and filenames for part files.

--- a/src/epub/text/part-story-title-with-span-with-subtitle-with-span.xhtml
+++ b/src/epub/text/part-story-title-with-span-with-subtitle-with-span.xhtml
@@ -13,7 +13,7 @@
 					<span epub:type="subtitle">Ship of the Line of Charles <span epub:type="z3998:roman">X</span></span>
 				</h2>
 				<p>This file has a part, a story title with a span, and a subtitle with a span.</p>
-				<p>The result should be: title=The Story of the Ulm: Ship of the Line of Charles X, id=the-story-of-the-ulm, filename=the-story-of-the-ulm.xhtml</p>
+				<p>The result should be: title=The Story of the Ulm: Ship of the Line of Charles X, id=book-4-the-story-of-the-ulm, filename=book-4-the-story-of-the-ulm.xhtml</p>
 			</section>
 		</section>
 	</body>
