--- a/src/epub/text/part-story-title-with-span.xhtml
+++ b/src/epub/text/part-story-title-with-span.xhtml
@@ -10,7 +10,7 @@
 			<section id="unknown" epub:type="volume se:short-story">
 				<h2 epub:type="title">An <span epub:type="z3998:roman">X</span>-Ray Fable</h2>
 				<p>This file has a part, and a story title with a span.</p>
-				<p>The result should be: title=An X-Ray Fable, id=an-x-ray-fable, filename=an-x-ray-fable.xhtml</p>
+				<p>The result should be: title=An X-Ray Fable, id=book-5-an-x-ray-fable, filename=book-5-an-x-ray-fable.xhtml</p>
 			</section>
 		</section>
 	</body>
