--- a/src/epub/text/part-story-title-with-subtitle-with-span.xhtml
+++ b/src/epub/text/part-story-title-with-subtitle-with-span.xhtml
@@ -13,7 +13,7 @@
 					<span epub:type="subtitle">The Story of the <span epub:type="se:name.vessel.ship">Titanic</span></span>
 				</h2>
 				<p>This file has a part, a story title, and a subtitle with a span.</p>
-				<p>The result should be: title=Doomed: The Story of the Titanic, id=doomed, filename=doomed.xhtml</p>
+				<p>The result should be: title=Doomed: The Story of the Titanic, id=book-6-doomed, filename=book-6-doomed.xhtml</p>
 			</section>
 		</section>
 	</body>
