--- a/src/epub/text/part-story-title.xhtml
+++ b/src/epub/text/part-story-title.xhtml
@@ -10,7 +10,7 @@
 			<section id="unknown" epub:type="volume se:short-story">
 				<h2 epub:type="title">Someone’s Story</h2>
 				<p>This file has a part, and a story title.</p>
-				<p>The result should be: title=Someone’s Story, id=someones-story, filename=someones-story.xhtml</p>
+				<p>The result should be: title=Someone’s Story, id=book-8-someones-story, filename=book-8-someones-story.xhtml</p>
 			</section>
 		</section>
 	</body>
