--- a/src/epub/text/part-story-title-with-subtitle.xhtml
+++ b/src/epub/text/part-story-title-with-subtitle.xhtml
@@ -13,7 +13,7 @@
 					<span epub:type="subtitle">Story Subtitle</span>
 				</h2>
 				<p>This file has a part, a story title, and a subtitle.</p>
-				<p>The result should be: title=Story Title: Story Subtitle, id=part-2-story-title, filename=story-title.xhtml</p>
+				<p>The result should be: title=Story Title: Story Subtitle, id=part-2-story-title, filename=part-2-story-title.xhtml</p>
 			</section>
 		</section>
 	</body>
